--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,15 @@
     "@uiw/react-md-editor": "^4.0.4",
     "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
